css/style.css
/* ... */
.shoes-collection-image-banner-title h2 {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: #fff;    
}

.shoes-collection .card {
  border: none;
}

/* ------------------------------------------ PRODUCT PAGE SECTION --------------------------------------- */
#product-page-cc-icon {
    font-size: 2rem;
}

/* -------------------------------------------- CART PAGE SECTION ---------------------------------------- */
h6.cart-page-continueshopping {
    position: relative;
    top: 5px;
}

h6.cart-page-continueshopping a {
    text-decoration: none;
    color:#329BD1;
}

a.continue-checkout-button {
    background-color: #329BD1;
    padding: 10px 30px;
    text-decoration: none;
    color: white;
}

i#cart-page-cc-icon {
    color:#329BD1;
    font-size: 25px;
}

.cart-page-subtotal {
    position: relative;
    right: 6px;
}

.cart-page-products-title {
    position: relative;
    left: 2rem;
}
/* end of Cart Page */


/* ------------------------------------------ MOBILE RESPONSIVENESS --------------------------------- */

@media only screen and (max-width: 834px) {

  /* HOMEPAGE VIDEO BANNER BAG SECTION */
  .homepage-video-banner-bag-textbox h3 {
    font-size: 3rem;
  }

  .homepage-video-banner-bag-textbox h3.mb-4 {
    margin-bottom: 1rem !important;
  }

  .homepage-video-banner-bag-textbox {
    position: absolute;
    top: 40%;
  }

  /* ELEVATE YOUR FASHION IMAGE BANNER SECTION */
  .elevate-fashion-text-overlay-box h3 {
    font-size: 3rem;
  }

  .elevate-fashion-text-overlay-box h3.mb-4 {
    margin-bottom: 1rem !important;
  }

  .elevate-fashion-text-overlay-box {
    position: absolute;
    top: 40%;
    left: 3%;
  }

  /* SHOES VIDEO BANNER HOMEPAGE SECTION */

  section.shoes-homepage-banner-video {
    padding-top: 3rem;
  }

  .shoes-homepage-banner-video-textbox h3 {
    font-size: 3rem;
  }

  .shoes-homepage-banner-video-textbox h3.mb-4 {
    margin-bottom: 1rem !important;
  }

  .shoes-homepage-banner-video-textbox {
    position: absolute;
    top: 40%;
    right: 3%;
  }

  /* JEWELRY VIDEO BANNER HOMEPAGE SECTION */
  .jewelry-video-banner-homepage-textbox h3 {
    font-size: 3rem;
  }

  .jewelry-video-banner-homepage-textbox h3.mb-4 {
    margin-bottom: 1rem !important;
  }

  .jewelry-video-banner-homepage-textbox {
    position: absolute;
    top: 40%;
  }
}

@media only screen and (max-width: 820px) {
    
}

@media only screen and (max-width: 810px) {
    
}

@media only screen and (max-width: 800px) {
    
}

@media only screen and (max-width: 768px) {
    
}

@media only screen and (max-width: 428px) {

  /* HOMEPAGE VIDEO BANNER BAG SECTION */
  .homepage-video-banner-bag-textbox h3 {
    font-size: 20px;
  }

  .homepage-video-banner-bag-textbox h3.mb-4 {
    margin-bottom: 0.5rem !important;
  }

  /* SHOP BY BRANDS SECTION */
  .shop-by-brands.collection-list.py-5 {
    padding-top: 1rem !important;
    padding-bottom: 1rem !important;
  }

  /* ELEVATE YOUR FASHION IMAGE BANNER SECTION */
  .elevate-fashion-text-overlay-box h3 {
    font-size: 20px;
  }

  .elevate-fashion-text-overlay-box h3.mb-4 {
    margin-bottom: 0.5rem !important;
  }

  .elevate-fashion-image-banner.py-5 {
    padding: 2rem 0 !important;
  }

  /* WOMENS BAGS AND JEWELRY IMAGE TEXT OVERLAY SECTION */
  .womens-bags-jewellery-img-text-overlay.py-5 {
    padding: 2rem 0 !important;
  }

  /* SHOES VIDEO BANNER HOMEPAGE SECTION */
  .shoes-homepage-banner-video-textbox h3 {
    font-size: 20px;
  }

  .shoes-homepage-banner-video-textbox h3.mb-4 {
    margin-bottom: 0.5rem !important;
  }

  .shoes-homepage-banner-video-textbox {
    position: absolute;
    top: 30%;
    right: 3%;
  }

  .shoes-homepage-banner-video.py-5 {
    padding: 2rem 0 !important;
  }

  /* JEWELRY VIDEO BANNER HOMEPAGE SECTION */
  .jewelry-video-banner-homepage-textbox h3 {
    font-size: 20px;
  }

  .jewelry-video-banner-homepage-textbox h3.mb-4 {
    margin-bottom: 0.5rem !important;
  }

  .jewelry-video-banner-homepage-textbox {
    position: absolute;
    top: 30%;
  }

  .jewelry-video-banner-homepage.py-5 {
    padding: 2rem 0 !important;
  }

  /* PRODUCT PAGE */
  .product-description-tabs-desktop {
    display: none;
  }

  .product-description-tabs-mobile {
    display: block !important;
  }
}

@media only screen and (max-width: 414px) {
    
}

@media only screen and (max-width: 390px) {
    
}

@media only screen and (max-width: 375px) {
    
}

@media only screen and (max-width: 360px) {
    
}

@media only screen and (max-width: 320px) {
    
}

